--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Exo&family=Pacifico&family=Permanent+Marker&display=swap" rel="stylesheet">
+        
+    <title>NBA Rosters</title>
   </head>
   <body>
     <noscript>
