--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,8 @@
     -->
 
     <link href="https://fonts.googleapis.com/css2?family=Exo&family=Pacifico&family=Permanent+Marker&display=swap" rel="stylesheet">
-        
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    
     <title>NBA Rosters</title>
   </head>
   <body>
